src/objects/BLP_Course__c.object
<CustomObject>
    <fields>
        <fullName>BLP_Affiliate__c</fullName>
        <label>Affiliate</label>
        <picklist>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLP_Audience__c</fullName>
        <description>LABEL_VALUE_AUDIENCE from the Success Factors Integration</description>
        <inlineHelpText>LABEL_VALUE_AUDIENCE</inlineHelpText>
        <label>Audience</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_Availability__c</fullName>
        <label>Availability</label>
        <picklist>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLP_Classification__c</fullName>
        <description>Classification from Success Factors Integration : Classification</description>
        <label>Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_Component_Type_Id__c</fullName>
        <description>CPNT_TYP_ID for SuccessFactors Integration : CPNT_TYP_ID</description>
        <label>Component Type Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_Course_Expert_Email__c</fullName>
        <label>Course Expert Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BLP_Course_Expert__c</fullName>
        <label>Course Expert</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_Course_Format__c</fullName>
        <label>Course Format</label>
        <picklist>
            <picklistValues>
                <fullName>On-demand Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Face to Face</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtual Classroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eLearning</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLP_Course_Name__c</fullName>
        <description>LABEL_VALUE_TITLE Integration Field Mapping Name</description>
        <label>Course Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_Course_Summary_Notifications_Days__c</fullName>
        <description>Used to select what number of days in advance of a training does the training admin want to be notified of the registeration summary for attendees.</description>
        <label>Course Summary Notifications (Days)</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLP_Delivery_Method__c</fullName>
        <description>DEL_MTH_ID from Success Factors Integration : DEL_MTH_ID</description>
        <label>Delivery Method</label>
        <picklist>
            <picklistValues>
                <fullName>SS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OJT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOC</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLP_Description__c</fullName>
        <description>LABEL_VALUE_DESC Mapping Id From Informatica</description>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BLP_Draft_Status_Updated_On__c</fullName>
        <label>Draft Status Updated On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BLP_Global_ID__c</fullName>
        <label>Global ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_Language_of_Instruction__c</fullName>
        <label>Language of Instruction</label>
        <picklist>
            <controllingField>BLP_Affiliate__c</controllingField>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English/French</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLP_Locale__c</fullName>
        <description>LOCALE_ID</description>
        <globalPicklist>BLP_Locale</globalPicklist>
        <inlineHelpText>LOCALE_ID</inlineHelpText>
        <label>Locale</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLP_Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLP_Prerequiste_Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prerequisite Course</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.BLP_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>$Source.Id</field>
                <operation>notEqual</operation>
                <valueField>BLP_Course__c.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BLP_Course__c</referenceTo>
        <relationshipLabel>Dependent Courses</relationshipLabel>
        <relationshipName>Prerequisite_Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLP_Responsible_Area__c</fullName>
        <description>USER_VALUE_RESP from Successfactors Integration</description>
        <inlineHelpText>USER_VALUE_RESP</inlineHelpText>
        <label>Responsible Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_Review_Date__c</fullName>
        <label>Review Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BLP_Review_Reminder_Date__c</fullName>
        <formula>IF(
  ISPICKVAL(BLP_Review_Reminder_Notifications_Months__c, &quot;12&quot;),
  (DATE((YEAR(BLP_Review_Date__c) - 1),MONTH(BLP_Review_Date__c),DAY(BLP_Review_Date__c))),
  IF(ISPICKVAL(BLP_Review_Reminder_Notifications_Months__c, &quot;6&quot;),BLP_Review_Date__c - (6 * 30 + 2), IF(ISPICKVAL(BLP_Review_Reminder_Notifications_Months__c, &quot;3&quot;),BLP_Review_Date__c - (3 * 30 + 1),BLP_Review_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BLP_Review_Reminder_Notifications_Months__c</fullName>
        <description>The number of days before the review date that an admin wants to be reminded of the course review.</description>
        <label>Review Reminder Notifications (Months)</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLP_Send_Review_Date_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Review Date Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLP_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replaced</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLP_Success_Factors_Ext_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Id for Success Factors Item Integration : CPNT_ID</description>
        <externalId>true</externalId>
        <label>Success Factors Ext ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BLP_Tech_Support_Email__c</fullName>
        <label>Tech Support Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BLP_Tech_Support__c</fullName>
        <label>Tech Support</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_Time_in_Draft_Status__c</fullName>
        <formula>IF( NOT(ISNULL(BLP_Draft_Status_Updated_On__c)), 
TEXT(IF(
YEAR(TODAY()) = YEAR(BLP_Draft_Status_Updated_On__c ), 
MONTH(TODAY()) - MONTH(BLP_Draft_Status_Updated_On__c ), 
FLOOR((TODAY() - BLP_Draft_Status_Updated_On__c ) / 30)
)) + &apos; Months&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in Draft Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_Training_Categories__c</fullName>
        <label>Training Categories</label>
        <picklist>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GXP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soft Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My Job</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLP_Version__c</fullName>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Course</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BLP_Course_Name__c</columns>
        <columns>BLP_Status__c</columns>
        <columns>BLP_Course_Format__c</columns>
        <columns>BLP_Affiliate__c</columns>
        <columns>BLP_Availability__c</columns>
        <columns>BLP_Training_Categories__c</columns>
        <columns>BLP_Language_of_Instruction__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Course Seq No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>